config/network-policy/allow-metrics-traffic.yaml
# Allow metrics traffic from namespaces labeled 'metrics: enabled'.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/name: beacon
    app.kubernetes.io/managed-by: kustomize
  name: allow-metrics-traffic
  namespace: system
spec:
  podSelector:
    matchLabels:
      control-plane: controller-manager
      app.kubernetes.io/name: beacon
  policyTypes:
    - Ingress
  ingress:
    # Allow ingress from metrics-enabled namespaces.
    - from:
      - namespaceSelector:
          matchLabels:
            metrics: enabled  # Required source namespace label.
      ports:
        - port: 8443
          protocol: TCP
